--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -16,7 +16,7 @@
                 <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li> <%= link_to("管理员控制面板", "#") %> </li>
+              <li> <%= link_to("管理员控制面板", admin_products_path) %> </li>
               <li> <%= link_to("我的商品", "#") %> </li>
               <li class="divider"></li>
               <li> <%= link_to("退出", destroy_user_session_path, method: :delete) %> </li>
