admin can upload image for their products

--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -2,6 +2,7 @@
   <div class="form-group">
     <%= f.input :title, input_html: { class: "form-control"} %>
     <%= f.input :description, input_html: { class: "form-control"} %>
+    <%= f.input :image, lable: "商品图片" %>
     <%= f.input :price, lable: "价格", input_html: { class: "form-control"} %>
     <%= f.input :quantity, lable: "库存量", input_html: { class: "form-control"} %>
 
