--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,7 +2,7 @@
   <thead>
       <tr>
         <td>商品名称</td>
-        <td>商品描述</td>
+        <td>商品图片</td>
         <td>库存</td>
         <td>单价（元）</td>
         <td>创建时间</td>
