--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-        <a class="navbar-brand" href="/">Job Listing - 1</a>
+        <a class="navbar-brand" href="/">JDStore - 2nd</a>
     </div>
 
     <div class="collapse navbar-collapse">
