--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2018 Job Listing - 1
+    <p class="text-center">Copyright ©2018 JDStore - 2nd
         <br>Design by
         <a href="http://cps.ninja" target=_new>Twentynight</a>
     </p>
